# module-6-SulistiawanSatria

zoo_management_api/: .gitignore  Dockerfile  README.md  app.py  config.py  db.py  db_handler.py  pyproject.toml  requirements.txt
zoo_management_api/ENV/: pyvenv.cfg
zoo_management_api/ENV/Scripts/: activate  activate.bat
zoo_management_api/auth/: __init__.py  login.py  register.py
zoo_management_api/models/: __init__.py  animal.py  employee.py
zoo_management_api/routes/: __init__.py  animals.py  animals_blueprint.py  employees.py  employees_blueprint.py
zoo_management_api/static/: swagger.json
zoo_management_api/tests/: test_animals.py
