[tool.poetry]
name = "zoo-management-api"
version = "0.1.0"
description = ""
authors = ["satria <satrialimpad@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.9.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
